[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -56.5
margin_right = 56.5

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 113.0
margin_bottom = 14.0

[node name="Game" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 113.0
margin_bottom = 38.0
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 113.0
margin_bottom = 62.0
text = "Options"

[node name="Instructions" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 113.0
margin_bottom = 86.0
text = "Instructions"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Score" type="Label" parent="HBoxContainer"]
margin_top = 13.0
margin_right = 39.0
margin_bottom = 27.0
text = "Score:"

[node name="Number" type="Label" parent="HBoxContainer"]
margin_left = 43.0
margin_top = 13.0
margin_right = 51.0
margin_bottom = 27.0
text = "0"

[connection signal="pressed" from="VBoxContainer/Game" to="." method="_on_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
